--- a/v2popup.html
+++ b/v2popup.html
@@ -17,7 +17,7 @@
         <img class="container_button-image2" src="slack-icon.svg" alt="slack-icon">
         <div clas="container_button-content-text2">  
           <p class="container_button-title2">
-            Comunidade do Slack
+            Comunidade do Slack!
           </p>
           <p class="container_button-text2">
             Tire as dúvidas do curso introdutório na <u>comunidade Trybe do Slack</u>
@@ -29,40 +29,38 @@
   </div>
   <h3>V3</h3>
   <div>
-    <a href="https://app.betrybe.com/community" class="container_button3">
-      <div class="container_button-left_bar3"></div>
-      <div class="container_button-content3">
-        <img class="container_button-image3" src="slack-icon.svg" alt="slack-icon">
-        <div clas="container_button-content-text3">  
-          <p class="container_button-title3">
-            Comunidade do Slack
+    <a href="https://app.betrybe.com/community" class="container_button">
+      <div class="container_button-left_bar"></div>
+      <div class="container_button-content">
+        <p class="container_button-image">👩🏽‍💻</p>
+        <div clas="container_button-content-text">  
+          <p class="container_button-title">
+            Por onde começar?
           </p>
-          <p class="container_button-text3">
-            Tire as dúvidas do curso introdutório na <u>comunidade Trybe do Slack</u>
+          <p class="container_button-text">
+            Entre na <u>comunidade Trybe do Slack</u> e tire suas dúvidas do curso introdutório! 
           </p>
         </div>
-        <img class="container_close-btn3" src="close_24px.png" alt="close-btn">
       </div>
     </a>
   </div>
-  <h3>V4</h3>
+  <!-- <h3>V5</h3>
   <div>
-    <a href="https://app.betrybe.com/community" class="container_button4">
-      <div class="container_button-left_bar4"></div>
-      <div class="container_button-content4">
-        <img class="container_button-image4" src="slack-icon.svg" alt="slack-icon">
-        <div clas="container_button-content-text4">  
-          <p class="container_button-title4">
-            Comunidade do Slack
+    <a href="https://app.betrybe.com/community" class="container_button5">
+      <div class="container_button-left_bar5"></div>
+      <div class="container_button-content5">
+        <p class="container_button-image5">👩🏽‍💻</p>
+        <div clas="container_button-content-text5">  
+          <p class="container_button-title5">
+            Comunidade do Slack!
           </p>
-          <p class="container_button-text4">
+          <p class="container_button-text5">
             Tire as dúvidas do curso introdutório na <u>comunidade Trybe do Slack</u>
           </p>
         </div>
-        <img class="container_close-btn4" src="close_24px.png" alt="close-btn">
       </div>
     </a>
-  </div>
+  </div> -->
   <!-- CORRECT POSITION -->
   <!-- <div>
     <a href="https://app.betrybe.com/community" class="container_button">
